@@ -201,6 +201,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #19475: Added an optional argument timespec to the datetime
+  isoformat() method to choose the precision of the time component.
+
 - Issue #2202: Fix UnboundLocalError in
   AbstractDigestAuthHandler.get_algorithm_impls.  Initial patch by Mathieu Dupuy.
 
